--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
         "start": "parcel examples/index.html -d examples/dist --cache-dir examples/cache --open",
         "lint": "eslint src/ --ext .js,.tsx,.ts",
         "prepublishOnly": "yarn run test && yarn run lint && yarn run ts:check && yarn run clean && yarn run build",
-        "install": "npm run build",
-        "prepare": "npm run build",
+        "install": "( [ ! -f ./ThisIsNpmPackage ] && [ ! -f ./AlreadyInstalled ] && echo \"\" > ./AlreadyInstalled && npm install . && node ./build.js ) || echo \"SKIP: NON GIT SOURCE\"",
         "test": "jest",
         "test:coverage": "jest --coverage",
         "ts:check": "tsc -p tsconfig.json --allowJs false --noEmit --emitDeclarationOnly false"
